# C-exam

./: .gitignore  CMakeLists.txt  DOKUMENTACIJA.md  README.md  main.cpp
list/: CMakeLists.txt
list/include/: list.h
list/src/: list.cpp
vcard/: CMakeLists.txt
vcard/include/: vcard.h
vcard/src/: vcard.cpp
